fix jump to top button size, closes #103

--- a/css/scrollTop.css
+++ b/css/scrollTop.css
@@ -1,4 +1,8 @@
 #backToTopBtn {
+    width: 3.5rem;
+    height: 3.5rem;
+    justify-content: center;
+    align-items: center;
     display: none;
     position: fixed;
     bottom: 20px;
@@ -7,17 +11,19 @@
     border: none;
     outline: none;
     background-color: #dc3545;
-    opacity: 0.7;
+    opacity: 1;
     color: white;
     cursor: pointer;
     padding: 10px;
-    border-radius: 50%;
+    border-radius: 100%;
     font-size: 18px;
     -webkit-transition: all 0.3s linear;
     -moz-transition: all 0.3s ease;
     -ms-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     transition: all 0.3s ease;
+    box-shadow: 0 0 5px 0 #d43678;
+    animation: jump 1s ease-in-out infinite alternate;
 }
 
 #backToTopBtn i {
@@ -31,7 +37,6 @@
 }
 
 #backToTopBtn:hover {
-    opacity: 1;
     box-shadow: 0 0 50px #d43678;
 }
 
@@ -39,9 +44,12 @@
     top: -5px;
 }
 
-#icon-up{   
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 5px;
+@keyframes jump {
+    0% {
+        bottom: 20px;
+    }
 
+    100% {
+        bottom: 30px;
+    }
 }
